syntax = "proto3";

option go_package = "go_fundamentals/grpc/authentication-jwt/grpcjwt";
package grpc.authentication.jwt;

service AuthenticationService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc ValidateToken(Token) returns (TokenValidationResponse) {}
}

message Token {
  string token = 1;
}

message TokenValidationResponse {
  bool valid = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
